--- a/ssh/config
+++ b/ssh/config
@@ -12,6 +12,7 @@ AddKeysToAgent yes
 Host niq.qqx.org
 Port 22
 User aschrab
+LocalForward localhost:4200 0:4200
 LocalForward localhost:5000 0:5000
 LocalForward localhost:9229 0:9229
 
