ssh - Use %C in ControlPath
Too often running into issues with hostnames causing the path to be too
long on OS X. Discovered `ssh -O exit <host>` to kill running master
process when necessary.

--- a/ssh/config
+++ b/ssh/config
@@ -3,7 +3,8 @@ VisualHostKey yes
 
 HashKnownHosts no
 ControlMaster auto
-ControlPath ~/.ssh/.master.%r@%h:%p
+#ControlPath ~/.ssh/.master.%r@%h:%p
+ControlPath ~/.ssh/.master.%C
 ControlPersist 30
 #VerifyHostKeyDNS=ask
 ServerAliveInterval=5
