--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,5 +1,5 @@
 utf8-strings
-keyid-format long
+keyid-format 0xlong
 
 auto-key-locate cert pka keyserver
 keyserver hkp://na.pool.sks-keyservers.net
