gpg - set photo viewer

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -18,3 +18,5 @@ personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 personal-compress-preferences BZIP2 ZLIB ZIP
 
 set-notation pka-address@gnupg.org=aaron@schrab.com
+
+photo-viewer display -title 'KeyID 0x%K' %i
