ssh - Setup for using port 443 for pilot

--- a/ssh/config
+++ b/ssh/config
@@ -22,7 +22,7 @@ User aschrab
 Port 22
 ForwardAgent yes
 
-Host pug.qqx.org proxy
+Host pug.qqx.org proxy pilot.trilug.org
 #ControlMaster auto
 #Port 443
 
