--- a/ssh/config.in
+++ b/ssh/config.in
@@ -1,3 +1,6 @@
+define(`OS', regexp(esyscmd(`uname'), `\(\S+\)', `\1'))dnl
+define(`HOME', regexp(esyscmd(`echo $HOME'), `\(\S+\)', `\1'))dnl
+define(`RUNDIR', ifelse(OS, `Darwin', `HOME/.', `/run/user/1000/'))dnl
 IgnoreUnknown AddKeysToAgent
 VisualHostKey yes
 
@@ -32,7 +35,7 @@ HostKeyAlias pug.qqx.org
 DynamicForward 9876
 
 Host proxy pug.qqx.org
-RemoteForward /run/user/1000/gnupg/S.gpg-agent /run/user/1000/gnupg/S.gpg-agent.extra
+RemoteForward /run/user/1000/gnupg/S.gpg-agent RUNDIR`'gnupg/S.gpg-agent.extra
 
 Host gay-deceiver.qqx.org
 
