--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -6,8 +6,8 @@ auto-key-locate cert pka keyserver
 #keyserver-options auto-key-retrieve timeout=3
 keyserver-options no-honor-keyserver-url
 
-hidden-encrypt-to 0x6DB5C725
-default-key 0x6DB5C725
+hidden-encrypt-to 0xC6BAEF5E6DB5C725
+default-key 0xC6BAEF5E6DB5C725
 
 verify-options show-primary-uid-only
 
