gpg - Add wkd to methods used for auto key locate

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,7 +1,7 @@
 utf8-strings
 keyid-format 0xlong
 
-auto-key-locate cert pka keyserver
+auto-key-locate wkd cert pka keyserver
 
 #keyserver-options auto-key-retrieve timeout=3
 keyserver-options no-honor-keyserver-url
