--- a/ssh/config.in
+++ b/ssh/config.in
@@ -1,7 +1,9 @@
 changequote({,})dnl
-define({OS}, regexp(esyscmd({uname}), {\(\S+\)}, {\1}))dnl
-define({HOME}, regexp(esyscmd({echo $HOME}), {\(\S+\)}, {\1}))dnl
-define({RUNDIR}, ifelse(OS, {Darwin}, {HOME/.}, {/run/user/1000/}))dnl
+define({strip}, {substr($1, 0, decr(len($1)))})dnl
+define({sh}, {strip(esyscmd($1))})dnl
+define({ENV}, sh({echo "$1"}))dnl
+define({OS}, sh(uname))dnl
+define({RUNDIR}, ifelse(OS, {Darwin}, {ENV(HOME)/.}, {/run/user/1000/}))dnl
 IgnoreUnknown AddKeysToAgent
 VisualHostKey yes
 
