--- a/ssh/config.in
+++ b/ssh/config.in
@@ -3,8 +3,12 @@ define({strip}, {substr($1, 0, decr(len($1)))})dnl
 define({sh}, {strip(esyscmd($1))})dnl
 define({ENV}, sh({echo "$1"}))dnl
 define({OS}, sh(uname))dnl
+define({atleast}, {ifelse(sh({perl -E '$_ = `ssh -V 2>&1`; chomp; s/^OpenSSH_//; s/p.*//; say version->parse($_) > v$1 ? "New" : "Old"'}), {New}, $2, $3)})dnl
 define({RUNDIR}, ifelse(OS, {Darwin}, {ENV(HOME)/.}, {/run/user/1000/}))dnl
+atleast({6.3}, {dnl
 IgnoreUnknown AddKeysToAgent
+AddKeysToAgent yes
+})dnl
 VisualHostKey yes
 
 HashKnownHosts no
@@ -14,7 +18,6 @@ ControlPath ~/.ssh/.master.%C
 ControlPersist 30
 #VerifyHostKeyDNS=ask
 ServerAliveInterval=5
-AddKeysToAgent yes
 
 Host niq.qqx.org
 Port 22
