tmux - add binding join pane after chosen pane

--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -12,3 +12,5 @@ bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{
 bind -T prefix 'c' new-window   -c "#{pane_current_path}"
 bind -T prefix '"' split-window -c "#{pane_current_path}"
 bind -T prefix '|' split-window -c "#{pane_current_path}" -h
+
+bind -T prefix a run "tmux choose-tree -Nf \"##{!=:##{pane_id},#{pane_id}}\" \"join-pane -t %%\""
