--- a/config/tmux/tmux2.4.conf
+++ b/config/tmux/tmux2.4.conf
@@ -11,3 +11,12 @@ bind -T copy-mode-vi WheelUpPane   send -X halfpage-up
 bind -T copy-mode-vi WheelDownPane send -X halfpage-down
 
 bind -T copy-mode-vi MouseUp1Pane send -X copy-pipe "clipboard copy"
+
+setw -g pane-border-format ' #{pane_title} '
+setw -g pane-border-status top
+
+# Auto hide pane-border-status line when only one pane is displayed (see tmux/tmux#566)
+set-hook -g 'after-new-window'   'run-shell -b "if [ \#{window_panes} -eq 1 ]; then tmux set pane-border-status off; fi"'
+set-hook -g 'after-kill-pane'    'run-shell -b "if [ \#{window_panes} -eq 1 ]; then tmux set pane-border-status off; fi"'
+set-hook -g 'pane-exited'        'run-shell -b "if [ \#{window_panes} -eq 1 ]; then tmux set pane-border-status off; fi"'
+set-hook -g 'after-split-window' 'run-shell -b "if [ \#{window_panes} -gt 1 ]; then tmux set pane-border-status top; fi"'
