--- a/.gitmodules
+++ b/.gitmodules
@@ -262,3 +262,6 @@
 [submodule "vim/bundle/sleuth"]
 	path = vim/bundle/sleuth
 	url = https://github.com/tpope/vim-sleuth.git
+[submodule "vim/bundle/apathy"]
+	path = vim/bundle/apathy
+	url = https://github.com/tpope/vim-apathy.git
