--- a/config/git/config
+++ b/config/git/config
@@ -98,6 +98,7 @@
 	pick        = cherry-pick
 	fethc       = fetch
 	up          = "!echo Use pull >&2 ; exit 1"
+	ctags       = "!ctags --recurse"
 	ff          = merge --ff-only
 	l1          = log --pretty=format:"'%C(yellow)%h %>(15,trunc)%C(green)%aN %<(14)%C(blue)%ar %C(reset)%<(70,trunc)%s'"
 	ls          = log --decorate --graph --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]"
