eslint - Don't setup for React by default
Comment out the React-related config, but leave it in for easy copying
into projects where React is being used.

--- a/eslintrc.yml
+++ b/eslintrc.yml
@@ -4,15 +4,14 @@ env:
   node: true
   mocha: true
 extends: standard
-parserOptions:
-  sourceType: script
-plugins:
-  - react
+# parserOptions:
+# plugins:
+#   - react
 rules:
   linebreak-style:
     - error
     - unix
   default-case:
     - error
-  react/jsx-uses-vars:
-    - error
+  # react/jsx-uses-vars:
+  #   - error
