tmux - Bind pane navigation keys in copy mode
Allow navigating to different panes without leaving copy mode.

--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -16,3 +16,8 @@ bind -T prefix '"' split-window -c "#{pane_current_path}"
 bind -T prefix '|' split-window -c "#{pane_current_path}" -h
 
 bind -T prefix a run "tmux choose-tree -Nf \"##{!=:##{pane_id},#{pane_id}}\" \"join-pane -t %%\""
+
+bind -T copy-mode-vi C-h select-pane -L
+bind -T copy-mode-vi C-j select-pane -D
+bind -T copy-mode-vi C-k select-pane -U
+bind -T copy-mode-vi C-l select-pane -R
