--- a/.gitmodules
+++ b/.gitmodules
@@ -265,3 +265,6 @@
 [submodule "nodenv/plugins/nodenv-aliases"]
 	path = nodenv/plugins/nodenv-aliases
 	url = https://github.com/nodenv/nodenv-aliases.git
+[submodule "vim/bundle/ack"]
+	path = vim/bundle/ack
+	url = https://github.com/mileszs/ack.vim.git
