git - Update URL for NetApp ngage repos

--- a/config/git/config
+++ b/config/git/config
@@ -180,6 +180,8 @@
 	pushInsteadOf = https://bitbucket.org/aschrab/
 [url "git@gitlab.com:aschrab/"]
 	pushInsteadOf = https://gitlab.com/aschrab/
-[url "https://aschrab@ngage.netapp.com/stash/scm/"]
+[url "https://aschrab@bitbucket.ngage.netapp.com/scm/"]
+	insteadOf = https://aschrab@ngage.netapp.com/stash/scm/
+	insteadOf = https://ngage.netapp.com/stash/scm/
 	insteadOf = ssh://git@ngage.netapp.com:7999/
 	insteadOf = ssh://ngage.netapp.com:7999/
