tmux - Prevent need to exit copy mode
Add a mapping to copy the selection, but stay in copy mode. Also bind
the usual prefix. This allows copying something from one pane, switching
to another to paste it, then switching back with the cursor in the same
location to allow copying other text near the first.

--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -21,3 +21,6 @@ bind -T copy-mode-vi C-h select-pane -L
 bind -T copy-mode-vi C-j select-pane -D
 bind -T copy-mode-vi C-k select-pane -U
 bind -T copy-mode-vi C-l select-pane -R
+
+bind -T copy-mode-vi 'y' send -X 'copy-selection'
+bind -T copy-mode '^o' switch-client -T prefix
