--- a/ssh/config.in
+++ b/ssh/config.in
@@ -17,9 +17,9 @@ ServerAliveInterval=5
 Host niq.qqx.org
 Port 22
 User aschrab
-LocalForward localhost:4200 0:4200
-LocalForward localhost:5000 0:5000
-LocalForward localhost:9229 0:9229
+# LocalForward localhost:4200 0:4200
+# LocalForward localhost:5000 0:5000
+# LocalForward localhost:9229 0:9229
 
 Host aschrab-mbp.lan
 User aschrab
