vscode - More configuration

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -5,7 +5,8 @@
         "**/.settings": true,
         "**/.factorypath": true
     },
-    "editor.suggestSelection": "first",
+    "editor.suggestSelection": "recentlyUsedByPrefix",
+    "editor.rulers": [80],
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "editor.renderWhitespace": "all",
     "git.allowForcePush": true,
@@ -18,15 +19,48 @@
         { "before": ["j", "l"], "after": ["<Esc>"]}
     ],
     "vim.normalModeKeyBindings": [
+        { "before": ["<C-h>"], "after": ["<C-w>", "h"]},
+        { "before": ["<C-j>"], "after": ["<C-w>", "j"]},
+        { "before": ["<C-k>"], "after": ["<C-w>", "k"]},
+        { "before": ["<C-l>"], "after": ["<C-w>", "l"]},
         { "before": ["[", "c"], "commands": ["workbench.action.editor.previousChange"]},
         { "before": ["]", "c"], "commands": ["workbench.action.editor.nextChange"]},
         { "before": ["[", "k"], "commands": ["editor.action.marker.previous"] },
         { "before": ["]", "k"], "commands": ["editor.action.marker.next"] }
     ],
+    "vim.visualModeKeyBindingsNonRecursive": [
+        { "before": [ ">" ], "commands": [ "editor.action.indentLines" ] },
+        { "before": [ "<" ], "commands": [ "editor.action.outdentLines" ] },
+        { "before": [ "p", ], "after": [ "p", "g", "v", "y" ] }
+    ],
+    "vim.enableNeovim": true,
+    "vim.neovimPath": "/usr/local/bin/nvim",
+    "vim.showcmd": true,
+    "vim.showmodename": true,
+    "vim.foldfix": true,
     "vim.startInInsertMode": false,
     "vim.useSystemClipboard": true,
     "vim.visualstar": true,
     "editor.cursorBlinking": "solid",
     "editor.fontLigatures": true,
-    "editor.fontFamily": "'Fira Code', Menlo, Monaco, 'Courier New', monospace"
+    "editor.fontFamily": "'Fira Code', Menlo, Monaco, 'Courier New', monospace",
+    "editor.lineNumbers": "relative",
+    "editor.overviewRulerBorder": false,
+    "editor.renderControlCharacters": true,
+    "editor.renderFinalNewline": false,
+    "editor.renderLineHighlight": "gutter",
+    "editor.tabCompletion": "onlySnippets",
+    "editor.formatOnPaste": true,
+    "editor.minimap.enabled": false,
+    "editor.suggest.localityBonus": true,
+    "editor.suggest.maxVisibleSuggestions": 7,
+    "files.autoGuessEncoding": true,
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "workbench.statusBar.feedback.visible": false,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.settings.useSplitJSON": true,
+    "terminal.integrated.copyOnSelection": true,
+    "terminal.integrated.macOptionIsMeta": true,
+    "terminal.integrated.shell.linux": "/bin/zsh"
 }
