Switch to my fork of git-fixup
Improved completion

--- a/.gitmodules
+++ b/.gitmodules
@@ -243,7 +243,7 @@
 	url = https://github.com/tonsky/FiraCode.git
 [submodule "upstreams/git-fixup"]
 	path = upstreams/git-fixup
-	url = https://github.com/keis/git-fixup.git
+	url = https://github.com/aschrab/git-fixup.git
 [submodule "vim/bundle/highlighted-yank"]
 	path = vim/bundle/highlighted-yank
 	url = https://github.com/machakann/vim-highlightedyank.git
