VSCode - new color for peacock

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -85,6 +85,10 @@
             "value": "#639"
         },
         {
+            "name": "Java Blue-Gray",
+            "value": "#557c9b"
+        },
+        {
             "name": "JavaScript Yellow",
             "value": "#f9e64f"
         },
