VSCode - Another color setting for peacock

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -85,6 +85,10 @@
             "value": "#639"
         },
         {
+            "name": "Go Cyan",
+            "value": "#5dc9e2"
+        },
+        {
             "name": "Java Blue-Gray",
             "value": "#557c9b"
         },
