tmux - Ignore non-numeric portion of version
When determining what configuration to apply ignore alphabetic portions
of the version. Homebrew currently has the version as `2.9a`, treat that
as `2.9` for purposes of configuration.

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,6 @@ bind C-l send-keys 'C-l'
 
 if '[ -c /dev/machtrace ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
-run 'tmux_conf="${XDG_CONFIG_HOME:-$HOME/.config}"/tmux/$(tmux -V | sed -e "s/ //" -e "s/-.*//").conf; [ -r $tmux_conf ] && tmux source $tmux_conf || :'
+run 'tmux_conf="${XDG_CONFIG_HOME:-$HOME/.config}"/tmux/$(tmux -V | sed -e "s/ //" -e "s/-.*//" -e "s/[a-z]*$//").conf; [ -r $tmux_conf ] && tmux source $tmux_conf || :'
 
 #new-session -s dflt
