--- a/config/git/config
+++ b/config/git/config
@@ -125,7 +125,7 @@
 	submodule-annotate = submodule foreach 'git update-ref --create-reflog -m \"Update from parent repo\" refs/heads/submodule-parent $sha1 || true'
 	wtree = worktree
 	exclude =  "!f() { printf %s\\\\n \"$@\" >> $(git rev-parse --absolute-git-dir)/info/exclude; }; f"
-	recent = "for-each-ref --count=10 --sort=-committerdate refs/heads --format='%(HEAD) %(color:blue)%(align:14)%(committerdate:relative)%(end)%(color:reset) %(color:red)%(align:10)%(objectname:short)%(end)%(color:reset) %(color:green)%(align:20)%(authorname)%(end)%(color:reset) %(color:yellow)%(refname:short)%(color:reset)\n  %(align:14)%(end) %(subject)'"
+	recent = "!f() { git for-each-ref --count=10 --sort=-committerdate refs/${1:-heads} --format='%(HEAD) %(color:blue)%(align:14)%(committerdate:relative)%(end)%(color:reset) %(color:red)%(align:10)%(objectname:short)%(end)%(color:reset) %(color:green)%(align:20)%(authorname)%(end)%(color:reset) %(color:yellow)%(refname:short)%(color:reset)\n  %(align:14)%(end) %(subject)'; }; f"
 
 [filter "date-prop"]
 	clean  = perl -pe 's/,,Date[^,]*,,/,,Date,,/i'
