git - Setup kitty difftool

--- a/config/git/config
+++ b/config/git/config
@@ -79,6 +79,14 @@
 [mergetool "fugitive"]
 	cmd = vim -f -c "Gdiffsplit!" "$MERGED"
 
+[diff]
+	tool = kitty
+[difftool]
+	prompt = false
+[difftool "kitty"]
+	cmd = kitty +kitten diff $LOCAL $REMOTE
+	trustExitCode = true
+
 [rerere]
 	enabled = yes
 	autoupdate = yes
