git - Add `sw` alias for `switch`

--- a/config/git/config
+++ b/config/git/config
@@ -111,6 +111,7 @@
 	sh          = show
 	sho         = show
 	st          = status -sb
+	sw          = switch
 	b           = branch
 	pick        = cherry-pick
 	fethc       = fetch
