tmux - Include short host name in title string

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour11
 set -ga update-environment " SSH_CLIENT SSH_CONNECTION"
 
 set -g set-titles on
-set -g set-titles-string '#S:#I.#P #T'
+set -g set-titles-string '#S@#h:#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
 set -g default-terminal 'screen-256color'
 set-option -sg escape-time 10
