VSCode - More config changes from within

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -126,5 +126,8 @@
     "[java]": {
     },
     "java.implementationsCodeLens.enabled": true,
-    "window.zoomLevel": -1
+    "window.zoomLevel": -1,
+    "java.requirements.JDK11Warning": false,
+    "java.semanticHighlighting.enabled": true,
+    "editor.insertSpaces": false
 }
