tmux - Terminal override for RGB in xterm
Recommended by neovim's checkhealth command.

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,7 @@ set -ga update-environment " SSH_CLIENT SSH_CONNECTION"
 set -g set-titles on
 set -g set-titles-string '#S@#h:#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
+set -ga terminal-overrides ',xterm-*:RGB'
 set -g default-terminal 'screen-256color'
 set-option -sg escape-time 10
 if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
