tmux - More efficient conditional for vim tmux navigator
At least on Mac (as of some recent upgrade) using a shell command to
check if the current pane is running vim is horribly (pretty much
unusably) slow.  Newer versions of tmux support pattern matching in
format strings and using the results for conditions, so use that when
tmux is at least 3.0.

--- a/config/tmux/tmux3.0.conf
+++ b/config/tmux/tmux3.0.conf
@@ -1,3 +1,10 @@
 # vim: ft=tmux
 
 run 'tmux source ${XDG_CONFIG_HOME:-$HOME/.config}/tmux/tmux2.9.conf'
+
+# Smart pane switching with awareness of vim splits
+# Use more efficient conditional supported by newer versions of tmux.
+bind -n C-h if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-h' 'select-pane -L'
+bind -n C-j if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-j' 'select-pane -D'
+bind -n C-k if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-k' 'select-pane -U'
+bind -n C-l if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-l' 'select-pane -R'
