--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,7 @@ bind-key h     select-pane -L
 bind-key l     select-pane -R
 
 # Smart pane switching with awareness of vim splits
+# This will be overridden with more efficient detection for newer versions of tmux
 bind -n C-h if "expr '#{pane_title}' : 'Vim@.*'" 'send-keys C-h' 'select-pane -L'
 bind -n C-j if "expr '#{pane_title}' : 'Vim@.*'" 'send-keys C-j' 'select-pane -D'
 bind -n C-k if "expr '#{pane_title}' : 'Vim@.*'" 'send-keys C-k' 'select-pane -U'
