--- a/config/tmux/tmux3.0.conf
+++ b/config/tmux/tmux3.0.conf
@@ -8,3 +8,6 @@ bind -n C-h if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-h' 'select-pane -L'
 bind -n C-j if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-j' 'select-pane -D'
 bind -n C-k if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-k' 'select-pane -U'
 bind -n C-l if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-l' 'select-pane -R'
+
+# Search back to last prompt (mnemonic: "[b]ack").
+bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward " "\; send-keys -X next-word
