git - Add `url` alias
Display the URL for remote. If multiple remotes are defined, with no
arguments it will exit with an error noting that there isn't a remote
with the combined name. The desired remote name can be supplied as an
argument to deal with that.

--- a/config/git/config
+++ b/config/git/config
@@ -98,6 +98,7 @@
 	v           = "!git gitv"
 	gitv        = "!f() { vim $(git rev-parse --git-dir)/index -c \":Flog $@\" -c ':tabclose 1'; }; f"
 	root        = rev-parse --show-toplevel
+	url         = "!f() { git remote get-url \"${1:-$(git remote)}\"; }; f"
 	conf        = config
 	co          = checkout
 	ci          = commit -v
