VSCode - Define vim insert mode binding for ^D
**Really** annoying to not be able to decrease the indent level there.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -21,6 +21,9 @@
     "vim.insertModeKeyBindingsNonRecursive": [
         { "before": ["j", "l"], "after": ["<Esc>"]}
     ],
+    "vim.insertModeKeyBindings": [
+        { "before": [ "<C-d>" ], "commands": [ "editor.action.outdentLines" ] },
+    ],
     "vim.normalModeKeyBindings": [
         { "before": ["<C-h>"], "after": ["<C-w>", "h"]},
         { "before": ["<C-j>"], "after": ["<C-w>", "j"]},
