git - Have `co` alias prod to use new tools
Attempt to prod me into using the new `switch` and `restore` commands
rather than the overly-overloaded `checkout`. For cases where I really
*want* to use `checkout` I'll still have the option of spelling it out
fully.

--- a/config/git/config
+++ b/config/git/config
@@ -93,7 +93,7 @@
 	root        = rev-parse --show-toplevel
 	url         = "!f() { git remote get-url \"${1:-$(git remote)}\"; }; f"
 	conf        = config
-	co          = checkout
+	co          = "!f() { echo Use switch or restore >&2; exit 1; }; f"
 	ci          = commit -v
 	cia         = commit -v -a
 	ad          = add
