yamllint - Forbid empty values in maps
For block mappings this could be a result of incorrect indentation.
These will be interpreted as implicit nulls, and nulls aren't allowed in
at least some places in AWS config files.

--- a/config/yamllint/config
+++ b/config/yamllint/config
@@ -7,3 +7,7 @@ rules:
   line-length:
     max: 160
     level: warning
+
+  empty-values:
+    forbid-in-block-mappings: true
+    forbid-in-flow-mappings: true
