git - Color moved lines when displaying diffs
This shouldn't affect much when looking at just added or removed code,
but when looking at changes that move things around it should help a
lot.

--- a/config/git/config
+++ b/config/git/config
@@ -36,6 +36,8 @@
 	#algorithm      = histogram # Too new for some of the systems I use
 	compactionHeuristic =  yes
 	indentHeuristic = yes
+	colorMoved = yes
+	colorMovedWS = ignore-space-at-eol,ignore-space-change
 
 [diff "ini"]
 	xfuncname = "^\\[.*\\]"
