tmux - Add non-breaking space to word-separators
Since I'm now including this at the end of my shell prompt, it's
*really* annoying if tmux's previous-word and similar commands don't
count it.

--- a/config/tmux/tmux3.0.conf
+++ b/config/tmux/tmux3.0.conf
@@ -11,3 +11,5 @@ bind -n C-l if -F "#{m:Vim@*,#{pane_title}}" 'send-keys C-l' 'select-pane -R'
 
 # Search back to last prompt (mnemonic: "[b]ack").
 bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward " "\; send-keys -X next-word
+# Add non-breaking space to word-separators
+set -a -g word-separators " "
