tmux - Set word-separators in older versions
The `word-separators` option is present at least as far back as 2.1. For
now I'll assume that it was in 2.0 as well. Not having the non-breaking
space included in there is *really* annoying, and 3.x versions are still
somewhat rare among the systems I use.

--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -24,3 +24,6 @@ bind -T copy-mode-vi C-l select-pane -R
 
 bind -T copy-mode-vi 'y' send -X 'copy-selection'
 bind -T copy-mode '^o' switch-client -T prefix
+
+# Add non-breaking space to word-separators
+set -a -g word-separators  
