--- a/eslintrc.yml
+++ b/eslintrc.yml
@@ -1,10 +1,12 @@
+---
 env:
   browser: true
   es6: true
   node: true
   mocha: true
 extends: standard
-# parserOptions:
+parserOptions:
+  ecmaVersion: 9
 # plugins:
 #   - react
 rules:
