--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -129,8 +129,14 @@
     "[java]": {
     },
     "java.implementationsCodeLens.enabled": true,
-    "window.zoomLevel": -1,
+    "window.zoomLevel": 0,
     "java.requirements.JDK11Warning": false,
     "java.semanticHighlighting.enabled": true,
-    "editor.insertSpaces": false
+    "editor.insertSpaces": false,
+    "python.languageServer": "Microsoft",
+    "remote.SSH.remoteServerListenOnSocket": true,
+    "remote.SSH.remotePlatform": {
+        "niq.qqx.org": "linux"
+    },
+    "window.title": "${remoteName}${separator}${folderName}${separator}${activeEditorShort}"
 }
