gpg - Change keyserver URL

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -6,7 +6,7 @@ auto-key-locate wkd cert pka keyserver
 #keyserver-options auto-key-retrieve timeout=3
 keyserver-options no-honor-keyserver-url
 
-keyserver hkp://na.pool.sks-keyservers.net
+keyserver hkp://pool.sks-keyservers.net
 
 hidden-encrypt-to 0xC6BAEF5E6DB5C725
 default-key 0xC6BAEF5E6DB5C725
