VSCode - Fix markdown preview
Allow source-only line breaks.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -138,5 +138,6 @@
     "remote.SSH.remotePlatform": {
         "niq.qqx.org": "linux"
     },
-    "window.title": "${remoteName}${separator}${folderName}${separator}${activeEditorShort}"
+    "window.title": "${remoteName}${separator}${folderName}${separator}${activeEditorShort}",
+    "markdown-preview-enhanced.breakOnSingleNewLine": false
 }
