--- a/.gitmodules
+++ b/.gitmodules
@@ -292,3 +292,6 @@
 [submodule "vim/bundle/fzf"]
 	path = vim/bundle/fzf
 	url = https://github.com/junegunn/fzf.git
+[submodule "nodenv/plugins/nodenv-package-json-engine"]
+	path = nodenv/plugins/nodenv-package-json-engine
+	url = https://github.com/nodenv/nodenv-package-json-engine.git
