tmux - Enable focus events
This is recommended by neovim's `:checkhealth` for better support of the
`autoread` option.

--- a/config/tmux/tmux1.9.conf
+++ b/config/tmux/tmux1.9.conf
@@ -8,4 +8,6 @@ set -g mouse-select-window on
 set -g mouse-select-pane   on
 set -g mouse-resize-pane   on
 
+set -g focus-events on
+
 bind -t vi-copy Enter copy-pipe "clipboard copy"
