--- a/config/tmux/tmux2.x.conf
+++ b/config/tmux/tmux2.x.conf
@@ -5,6 +5,7 @@ set -g status-position top
 setw -g window-status-last-style underscore
 
 set -g mouse on
+set -g focus-events on
 
 unbind -T root WheelUpPane
 unbind -T root WheelDownPane
