--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -142,10 +142,7 @@
     "window.title": "${remoteName}${separator}${folderName}${separator}${activeEditorShort}",
     "markdown-preview-enhanced.breakOnSingleNewLine": false,
     "redhat.telemetry.enabled": false,
-    "workbench.editorAssociations": [
-        {
-            "viewType": "jupyter.notebook.ipynb",
-            "filenamePattern": "*.ipynb"
-        }
-    ]
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter.notebook.ipynb"
+    }
 }
