--- a/config/git/config
+++ b/config/git/config
@@ -119,6 +119,7 @@
 	l1          = log --pretty=format:"'%C(yellow)%h %>(15,trunc)%C(green)%aN %<(14)%C(blue)%ar %C(reset)%<(70,trunc)%s'"
 	ls          = log --decorate --graph --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]"
 	ll          = log --decorate --numstat --date=short --pretty=format:"%C(yellow)%ad\\ %h%Cred%d\\ %Creset%s%Cblue\\ [%cn]"
+	f           = "!f() { git foresta \"$@\" | less --chop-long-lines; }; f"
 	tree        = "!f() { base=$(git show-branch --merge-base $@) && git ls --boundary ^$base^ $@ --; }; f"
 	last        = log --stat -p -1 HEAD
 	stashed     = stash list --pretty='%gd: %Cred%h%Creset %Cgreen[%ar]%Creset %s'
