VSCode - Add vim insert-mode mapping for ^T
The default vim setup for this is severely broken. I'd already had the
mapping for ^D.

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -23,6 +23,7 @@
     ],
     "vim.insertModeKeyBindings": [
         { "before": [ "<C-d>" ], "commands": [ "editor.action.outdentLines" ] },
+        { "before": [ "<C-t>" ], "commands": [ "editor.action.indentLines" ] },
     ],
     "vim.normalModeKeyBindings": [
         { "before": ["<C-h>"], "after": ["<C-w>", "h"]},
