VSCode - Minor update to TypeScript formatting settings

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -145,5 +145,6 @@
     "redhat.telemetry.enabled": false,
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter.notebook.ipynb"
-    }
+    },
+    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true
 }
